# tauri-plugin-sqlite

./: .gitignore  .markdownlint-cli2.cjs  Cargo.toml  PUBLISHING.md  README.md  api-iife.js  build.rs  package-lock.json  package.json  rollup.config.js  vitest.config.ts
.github/workflows/: ci.yml
crates/sqlx-sqlite-conn-mgr/: Cargo.toml  README.md
crates/sqlx-sqlite-conn-mgr/migrations/: .gitkeep
crates/sqlx-sqlite-conn-mgr/src/: attached.rs  config.rs  database.rs  error.rs  lib.rs  write_guard.rs
crates/sqlx-sqlite-conn-mgr/tests/: attached_tests.rs
crates/sqlx-sqlite-observer/: Cargo.toml  README.md
crates/sqlx-sqlite-observer/src/: broker.rs  change.rs  conn_mgr.rs  error.rs  hooks.rs  lib.rs  schema.rs  stream.rs
crates/sqlx-sqlite-observer/tests/: conn_mgr_tests.rs  integration_tests.rs
crates/sqlx-sqlite-toolkit/: README.md
crates/sqlx-sqlite-toolkit/src/: builders.rs  error.rs  lib.rs  pagination.rs  transactions.rs  wrapper.rs
crates/sqlx-sqlite-toolkit/tests/: interruptible_transaction_tests.rs  pagination_tests.rs
guest-js/: index.test.ts  index.ts  tsconfig.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: execute_interruptible_transaction.toml  transaction_continue.toml  transaction_read.toml
permissions/schemas/: schema.json
src/: commands.rs  decode.rs  error.rs  lib.rs  transactions.rs  wrapper.rs
